src/objects/MICO_Test_Script_Burndown_Stat__c.object
<CustomObject>
    <description>Business Description: This captures Test Script approval progress and is used for the creation of burndown charts as part of Agile reporting</description>
    <fields>
        <fullName>Actual_Velocity__c</fullName>
        <formula>IF( Sprint__r.Working_Days_Through_Sprint__c &gt; 0,   Total_Test_Script_Approved__c / Sprint__r.Working_Days_Through_Sprint__c    , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Velocity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>MICO_Sprint__c</referenceTo>
        <relationshipLabel>Test Script Burndown Stats</relationshipLabel>
        <relationshipName>Test_Script_Burndown_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Test_Script_Approved__c</fullName>
        <label>Total Test Script Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Test_Scripts__c</fullName>
        <label>Total Test Scripts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Script Burndown Stat</label>
    <nameField>
        <label>TSBS  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Script Burndown Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>